--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class= "bg-gray-400 ml-72 mt-24 rounded  h-84 w-64 pl-4 border-4 border-blue-400">
 
 
-    <input id="iptBox" type="text" class="bg-gray-200 rounded  p-6 mt-2 sm:p-4 sm:flex sm:justify-content-center " />
+    <input id="iptBox" type="text" class="bg-gray-200 rounded  p-6 mt-2 sm:bg-red-400 sm:p-2 align-content: center sm:align-content: center;  " />
     <div >
       <button value="1" class="shadow-inner  p-5 bg-red-400 rounded m-2 font-bold  ">1</button>
       <button value="2" class="shadow-inner p-5 bg-red-400 rounded m-2 font-bold ">2</button>
